--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,16 @@
 ---
 
 @import "{{ site.theme }}";
+
+
+.highlight {
+    background-color: #d3d3d3;
+}
+
+pre code {
+    background-color: #d3d3d3;
+}
+
+code {
+    background-color: #b0cbdd;
+}
